fix grid spacing for side-bar

--- a/styles.css
+++ b/styles.css
@@ -12,24 +12,25 @@ body {
     grid-row: 1 / 3;
     color: white;
     background-color: #1992d4;
-    font-size: 20px;
+    font-size: 25px;
     display: flex;
     flex-direction: column;
-    padding: 5px;
+    padding: 15px;
     gap: 30px;
 }
 
 .title {
     display: grid;
-    grid-template-columns: repeat(2, 115px);
+    grid-template-columns: repeat(2, 55px);
     margin-left: 10px;
 } 
 
 .nav li, .setting li  {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, min-content);
     margin-bottom: 15px;
     margin-left: 10px;
+    gap: 30px;
 }
 
 /* .search {
